--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOr0d6L2IX2GekRhWf1Nn6G",
+      "authorship_tag": "ABX9TyPN4xC2EBykvKdxBAYY1qm1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -911,12 +911,16 @@
         "time=int(input(\"time\"))\n",
         "month=input(\"month\")\n",
         "days=int(input(\"days\"))\n",
+        "year=int(input(\"year\"))\n",
         "if month==\"jan\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
         " days_in_month=31\n",
         "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
         "  days_in_month=30\n",
+        "\n",
+        "if year % 4 ==0 and  year % 100 !=0 or year % 400 ==0:\n",
+        "  print(\"days_in_month29\")\n",
         "else:\n",
-        "  days_in_month=28\n",
+        "  print(\"days_in_month28\")\n",
         "print(days/days_in_month)\n",
         "amount=principal*rate*time/100\n",
         "si=principal*rate*time*days_in_month/100\n",
@@ -927,12 +931,12 @@
       ],
       "metadata": {
         "id": "M2u04TJxSAT9",
-        "outputId": "075b67c7-bdf4-46ee-ac8a-c42206532053",
+        "outputId": "49d3015e-0834-4d46-9a91-42896242a04e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -940,13 +944,15 @@
           "text": [
             "principal40000\n",
             "rate5\n",
-            "time6\n",
-            "monthmay\n",
-            "days20\n",
-            "0.6451612903225806\n",
-            "12000.0\n",
-            "372000.0\n",
-            "384000.0\n"
+            "time5\n",
+            "monthjuly\n",
+            "days10\n",
+            "year2025\n",
+            "days_in_month28\n",
+            "0.3225806451612903\n",
+            "10000.0\n",
+            "310000.0\n",
+            "320000.0\n"
           ]
         }
       ]
@@ -1086,9 +1092,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "year=int(input(\"year\"))\n",
+        "if year % 4 ==0 and  year % 100 !=0 or year % 400 ==0:\n",
+        "  days_in_month=29\n",
+        "else:\n",
+        "  days_in_month=28\n",
+        "print(\"days in month:\",days_in_month)\n"
+      ],
+      "metadata": {
+        "id": "68JSwDhXMnBn",
+        "outputId": "58192c2c-cf1e-4d0e-f685-09cdaa2b0ff4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "year2025\n",
+            "days in month: 28\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "68JSwDhXMnBn"
+        "id": "p1Pn1TRZQT9d"
       },
       "execution_count": null,
       "outputs": []
