--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPN4xC2EBykvKdxBAYY1qm1",
+      "authorship_tag": "ABX9TyPWMewAA+e1Mnwwq1oUEE53",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -916,43 +916,42 @@
         " days_in_month=31\n",
         "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
         "  days_in_month=30\n",
-        "\n",
         "if year % 4 ==0 and  year % 100 !=0 or year % 400 ==0:\n",
-        "  print(\"days_in_month29\")\n",
+        "  days_in_month=29\n",
         "else:\n",
-        "  print(\"days_in_month28\")\n",
-        "print(days/days_in_month)\n",
+        "  days_in_month=28\n",
+        "total_time=days/days_in_month\n",
+        "print(total_time)\n",
         "amount=principal*rate*time/100\n",
         "si=principal*rate*time*days_in_month/100\n",
-        "print(amount)\n",
-        "print(si)\n",
-        "print(amount+si)\n",
+        "print(\"amount_\", amount)\n",
+        "print(\"si_\",si)\n",
+        "print(\"total_\" ,amount+si)\n",
         "\n"
       ],
       "metadata": {
         "id": "M2u04TJxSAT9",
-        "outputId": "49d3015e-0834-4d46-9a91-42896242a04e",
+        "outputId": "4828cb4f-ed83-4a4c-eb37-afedc038c16c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "principal40000\n",
-            "rate5\n",
+            "rate10\n",
             "time5\n",
             "monthjuly\n",
             "days10\n",
-            "year2025\n",
-            "days_in_month28\n",
-            "0.3225806451612903\n",
-            "10000.0\n",
-            "310000.0\n",
-            "320000.0\n"
+            "year2024\n",
+            "0.3448275862068966\n",
+            "amount_ 20000.0\n",
+            "si_ 580000.0\n",
+            "total_ 600000.0\n"
           ]
         }
       ]
@@ -1107,7 +1106,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
