--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVTE4PoyJ/PDptVEFI9Bki",
+      "authorship_tag": "ABX9TyPDbNWWEk0s9bbPu3bQW7/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -190,7 +190,7 @@
         "id": "H4-lOnIUHjRO",
         "outputId": "916e9d56-6d23-4134-ea12-bdeb440f033f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
         "id": "q4lYBdKDIPal",
         "outputId": "9dbf72c5-84ca-4e6b-f329-793af0af0474"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,7 @@
         "id": "jw5daDinIl8a",
         "outputId": "026a7879-6d38-4365-b893-abf034c25aff"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
         "id": "uLzA1WQTKN_D",
         "outputId": "251e6565-c152-443a-acdd-330d07919f13"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
         "id": "yRj4nZcqLWJb",
         "outputId": "844e9c9e-b59e-4e26-9237-d53232b9b816"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +339,7 @@
         "id": "yUERPkI3RRbA",
         "outputId": "03837923-c386-4917-f6f7-073673870f98"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -377,7 +377,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +407,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +442,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +484,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,6 +494,97 @@
             "32000.0\n",
             "20645.16129032258\n",
             "52645.161290322576\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "principal=int(input(\"principal:\"))\n",
+        "rate=int(input(\"rate:\"))\n",
+        "time_in_month=int(input(\"time_in_month:\"))\n",
+        "time_in_days=int(input(\"time in days:\"))\n",
+        "month=input(\"month\")\n",
+        "year=int(input(\"year:\"))\n",
+        "if month==\"jan\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
+        " days_in_month=31\n",
+        "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
+        " days_in_month=30\n",
+        "elif month==\"feb\":\n",
+        "  if year % 4==0 or year % 100!=0 and year % 400==0:\n",
+        "     days_in_month=29\n",
+        "  else:\n",
+        "   days_in_month=28\n",
+        "print(\" days in month_ \",days_in_month)\n",
+        "time=time_in_days/days_in_month\n",
+        "print(\"time:\",time)\n",
+        "amount=(principal*rate*time_in_month)/100\n",
+        "si=(principal*rate*time_in_month*time)/100\n",
+        "print(\"amount:\",amount)\n",
+        "print(\"si:\",si)\n",
+        "print(amount+si)\n"
+      ],
+      "metadata": {
+        "id": "syZ0q0vQcBUz",
+        "outputId": "18222067-0c9c-4b5b-a526-6ac3e6c35211",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "principal:60000\n",
+            "rate:10\n",
+            "time_in_month:5\n",
+            "time in days:20\n",
+            "monthjuly\n",
+            "year:2024\n",
+            " days in month_  31\n",
+            "time: 0.6451612903225806\n",
+            "amount: 30000.0\n",
+            "si: 19354.838709677417\n",
+            "49354.83870967742\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "month=input(\"month:\")\n",
+        "year=int(input(\"year:\"))\n",
+        "if month==\"jan\" or month==\"march\" or month==\"may\" or month==\"july\" or month==\"august\" or month==\"october\" or month==\"december\":\n",
+        " days_in_month=31\n",
+        "elif month==\"april\" or month==\"june\" or month==\"september\" or month==\"november\":\n",
+        " days_in_month=30\n",
+        "elif month==\"feb\":\n",
+        " if year % 4==0 or year % 100!=0 and year % 400==0:\n",
+        "  days_in_month=29\n",
+        " else:\n",
+        "   days_in_month=28\n",
+        "print(\" days in month_ \",days_in_month)\n"
+      ],
+      "metadata": {
+        "id": "WjZ4eWLsj64s",
+        "outputId": "fd2b8d1b-be32-45ba-991d-95c77ee1b1c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "month:feb\n",
+            "year:2028\n",
+            " days in month_  29\n"
           ]
         }
       ]
