--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWMewAA+e1Mnwwq1oUEE53",
+      "authorship_tag": "ABX9TyODnsT9iHhgwTSzwGP+jFz9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1120,12 +1120,68 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "direction=input(\"direction= \")\n",
+        "if direction==\"north incoming\" or direction==\"east outgoing\" or direction==\"south outgoing\" or direction==\"west outgoing\" or direction==\"north outgoing\":\n",
+        "  print(\"open\")\n",
+        "elif direction==\"east incoming\" or direction==\"south incoming\" or direction==\"west incoming\":\n",
+        "  print(\"close\")\n",
+        "else:\n",
+        "  print(\"invalid direction\")\n",
+        "print(\"_______\")\n",
+        "direction=input(\"direction= \")\n",
+        "if direction==\"south incoming\" or direction==\"west outgoing\" or direction==\"north outgoing\" or direction==\"east outgoing\" or direction==\"south outgoing\":\n",
+        "  print(\"open\")\n",
+        "elif direction==\"west incoming\" or direction==\"north incoming\" or direction==\"east incoming\":\n",
+        "  print(\"close\")\n",
+        "else:\n",
+        "   print(\"invalid direction\")\n",
+        "print(\"______\")\n",
+        "direction=input(\"direction= \")\n",
+        "if direction==\"west incoming\" or direction==\"north outgoing\" or direction==\"east outgoing\" or direction==\"south outgoing\" or direction==\"west outgoing\":\n",
+        "  print(\"open\")\n",
+        "elif direction==\"north incoming\" or direction==\"east incoming\" or direction==\"south incoming\":\n",
+        "  print(\"close\")\n",
+        "else:\n",
+        "  print(\"invalid direction\")\n",
+        "print(\"______\")\n",
+        "direction= input(\"direction= \")\n",
+        "if direction==\"east incoming\" or direction==\"south outgoing\" or direction==\"west outgoing\" or direction==\"north outgoing\" or direction==\"east outgoing\":\n",
+        "  print(\"open\")\n",
+        "elif direction==\"south incoming\" or direction==\"west incoming\" or direction==\"north incoming\":\n",
+        "  print(\"close\")\n",
+        "else:\n",
+        "  print(\"invalid direction\")\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "mjaDwyZFU6UR"
+        "id": "mjaDwyZFU6UR",
+        "outputId": "75a05356-31c0-426c-e8d0-bd753f44bae2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "direction= north incoming\n",
+            "open\n",
+            "_______\n",
+            "direction= west incoming\n",
+            "close\n",
+            "______\n",
+            "direction= south incoming\n",
+            "close\n",
+            "______\n",
+            "direction= east incoming\n",
+            "open\n"
+          ]
+        }
+      ]
     }
   ]
 }
