--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODnsT9iHhgwTSzwGP+jFz9",
+      "authorship_tag": "ABX9TyN3JysamHoVVI6r3f0Ncn7k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1121,6 +1121,116 @@
     {
       "cell_type": "code",
       "source": [
+        "#traffic light system\n",
+        "print(\"direction= north\")\n",
+        "print(\"----------------\")\n",
+        "print(\"north incoming: go \")\n",
+        "print(\"south outgoing: go\")\n",
+        "print(\"west outgoing: go\")\n",
+        "print(\"east outgoing: go\")\n",
+        "print(\"north outgoing: go\")\n",
+        "print(\"east incoming: stop\")\n",
+        "print(\"south incoming: stop\")\n",
+        "print(\"west incoming: stop\")\n",
+        "print(\"__________________\")\n",
+        "print(\"direction= south\")\n",
+        "print(\"---------------\")\n",
+        "print(\"south incoming: go\")\n",
+        "print(\"west outgoing: go\")\n",
+        "print(\"north outgoing: go\")\n",
+        "print(\"east outgoing: go\")\n",
+        "print(\"south outgoing: go\")\n",
+        "print(\"west incoming: stop\")\n",
+        "print(\"north incoming: stop\")\n",
+        "print(\"east incoming: stop\")\n",
+        "print(\"__________________\")\n",
+        "print(\"direction= east\")\n",
+        "print(\"--------------\")\n",
+        "print(\"east incoming: go\")\n",
+        "print(\"south outgoing: go\")\n",
+        "print(\"west outgoing: go\")\n",
+        "print(\"north outgoing: go\")\n",
+        "print(\"east outgoing: go\")\n",
+        "print(\"south incoming: stop\")\n",
+        "print(\"west incoming: stop\")\n",
+        "print(\"north incoming: stop\")\n",
+        "print(\"__________________\")\n",
+        "print(\"direction= west\")\n",
+        "print(\"--------------\")\n",
+        "print(\"west incoming: go\")\n",
+        "print(\"north outgoing: go\")\n",
+        "print(\"east outgoing: go\")\n",
+        "print(\"south outgoing: go\")\n",
+        "print(\"west outgoing: go\")\n",
+        "print(\"north incoming: stop\")\n",
+        "print(\"east incoming: stop\")\n",
+        "print(\"south incoming: stop\")\n",
+        "print(\"________________\")"
+      ],
+      "metadata": {
+        "id": "HixEtkacnlaf",
+        "outputId": "6d74a27a-3c8a-4387-f6fa-356fbdba60d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "direction= north\n",
+            "----------------\n",
+            "north incoming: go \n",
+            "south outgoing: go\n",
+            "west outgoing: go\n",
+            "east outgoing: go\n",
+            "north outgoing: go\n",
+            "east incoming: stop\n",
+            "south incoming: stop\n",
+            "west incoming: stop\n",
+            "__________________\n",
+            "direction= south\n",
+            "---------------\n",
+            "south incoming: go\n",
+            "west outgoing: go\n",
+            "north outgoing: go\n",
+            "east outgoing: go\n",
+            "south outgoing: go\n",
+            "west incoming: stop\n",
+            "north incoming: stop\n",
+            "east incoming: stop\n",
+            "__________________\n",
+            "direction= east\n",
+            "--------------\n",
+            "east incoming: go\n",
+            "south outgoing: go\n",
+            "west outgoing: go\n",
+            "north outgoing: go\n",
+            "east outgoing: go\n",
+            "south incoming: stop\n",
+            "west incoming: stop\n",
+            "north incoming: stop\n",
+            "__________________\n",
+            "direction= west\n",
+            "--------------\n",
+            "west incoming: go\n",
+            "north outgoing: go\n",
+            "east outgoing: go\n",
+            "south outgoing: go\n",
+            "west outgoing: go\n",
+            "north incoming: stop\n",
+            "east incoming: stop\n",
+            "south incoming: stop\n",
+            "________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "direction=input(\"direction= \")\n",
         "if direction==\"north incoming\" or direction==\"east outgoing\" or direction==\"south outgoing\" or direction==\"west outgoing\" or direction==\"north outgoing\":\n",
         "  print(\"open\")\n",
@@ -1151,18 +1261,16 @@
         "elif direction==\"south incoming\" or direction==\"west incoming\" or direction==\"north incoming\":\n",
         "  print(\"close\")\n",
         "else:\n",
-        "  print(\"invalid direction\")\n",
-        "\n",
-        "\n"
+        "  print(\"invalid direction\")"
       ],
       "metadata": {
-        "id": "mjaDwyZFU6UR",
-        "outputId": "75a05356-31c0-426c-e8d0-bd753f44bae2",
+        "id": "q79CIeHpsQNz",
+        "outputId": "dbed3ed7-cd1a-4af1-ed05-4abc2c37f273",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
