--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3JysamHoVVI6r3f0Ncn7k",
+      "authorship_tag": "ABX9TyMTEkmGb3Jfpqne00UNmOBc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1174,7 +1174,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1270,7 +1270,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1287,6 +1287,234 @@
             "______\n",
             "direction= east incoming\n",
             "open\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#loop\n",
+        "for i in range(1,11):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "STSRrwiUrMli",
+        "outputId": "8cdd1cd4-3ce8-4aaa-fb3c-cedd97818f28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range (0,10,2):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "a1rjyoVPsyhn",
+        "outputId": "609fbd42-4c34-45a2-cb00-55fae784f723",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,11,2):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "8YNYKKldtxdW",
+        "outputId": "29979018-dafe-47a4-e4ac-8c01d8ade175",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum=0\n",
+        "for i in range(1,11):\n",
+        "  sum=sum+i\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "A6rzhaZ6uFzT",
+        "outputId": "e726aedd-f72c-4303-a985-f128949158fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum=0\n",
+        "for i in range(1,11,2):\n",
+        "  sum=sum+i\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "Gy7C4Ijvv9ZS",
+        "outputId": "4f5deda5-38c1-45ed-823c-586dc922f5c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum=0\n",
+        "for i in range(2,13,2):\n",
+        "  sum=sum+i\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "F-CjWAmnwJeT",
+        "outputId": "2dc89a3b-a075-4530-e14c-3f96339a0838",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "42\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "factorial=1\n",
+        "for i in range(1,6):\n",
+        "  factorial=factorial*i\n",
+        "  print(factorial)"
+      ],
+      "metadata": {
+        "id": "k1FGrtwDx_Id",
+        "outputId": "ac7a183e-7c83-4a81-f3da-1ae92ee2b6b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "6\n",
+            "24\n",
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "factorial=1\n",
+        "sum=0\n",
+        "for i in range(1,6):\n",
+        "  factorial=factorial*i\n",
+        "  sum=sum+factorial\n",
+        "print(factorial)\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "iDZHNW4izF3N",
+        "outputId": "929c356e-d7b5-45be-fa69-06440e4e9cfe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n",
+            "153\n"
           ]
         }
       ]
