--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTEkmGb3Jfpqne00UNmOBc",
+      "authorship_tag": "ABX9TyML7TUvEfExp+xuPuWw0MUx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1305,7 +1305,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1338,7 +1338,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1366,7 +1366,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1396,7 +1396,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1422,7 +1422,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1448,7 +1448,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1474,7 +1474,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1507,7 +1507,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1518,6 +1518,120 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#fabonaccai\n",
+        "first_term=0\n",
+        "second_term=1\n",
+        "print(first_term)\n",
+        "print(second_term)\n",
+        "third_term=first_term+second_term\n",
+        "print(third_term)"
+      ],
+      "metadata": {
+        "id": "nV_pKlGikiw2",
+        "outputId": "db1658b3-b0f6-4b49-abb6-55f6146e964d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first_term=0\n",
+        "second_term=1\n",
+        "print(first_term)\n",
+        "print(second_term)\n",
+        "for i in range(3,13):\n",
+        "  third_term=first_term+second_term\n",
+        "  first_term=second_term\n",
+        "  second_term=third_term\n",
+        "print(third_term)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "NMau7Nprfrg0",
+        "outputId": "3af26b0b-0c39-4ce7-a352-19c1d7a34f3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "89\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first_term=0\n",
+        "second_term=1\n",
+        "print(first_term)\n",
+        "print(second_term)\n",
+        "for i in range(3,11):\n",
+        "  third_term=first_term+second_term\n",
+        "  first_term=second_term\n",
+        "  second_term=third_term\n",
+        "  print(third_term)"
+      ],
+      "metadata": {
+        "id": "FLJAFP29ihrz",
+        "outputId": "525b23ca-5218-4378-97ba-94d69a1d91c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "INDMqKxCn66p"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
