--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyML7TUvEfExp+xuPuWw0MUx",
+      "authorship_tag": "ABX9TyOcMlXeotAy5/OaFtXJRqmP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1532,12 +1532,12 @@
       ],
       "metadata": {
         "id": "nV_pKlGikiw2",
-        "outputId": "db1658b3-b0f6-4b49-abb6-55f6146e964d",
+        "outputId": "49b46d8f-9f0e-4a65-9bf4-a4b7b4468bb0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1571,7 +1571,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,7 +1604,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1626,12 +1626,66 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "sum=0\n",
+        "factorial=1\n",
+        "for i in range(1,7):\n",
+        "  factorial=factorial*i\n",
+        "  if i % 2==0:\n",
+        "    sum=factorial+sum\n",
+        "print(sum)"
+      ],
       "metadata": {
-        "id": "INDMqKxCn66p"
+        "id": "INDMqKxCn66p",
+        "outputId": "faa0f771-fb0c-42c8-d02f-fbf564e43380",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "746\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sum=0\n",
+        "for a in range(1,11,2):\n",
+        "  fact=1\n",
+        "for b in range(1,i+1):\n",
+        "  fact=fact*b\n",
+        "  sum=sum+fact\n",
+        "  print(fact)\n"
+      ],
+      "metadata": {
+        "id": "bCXEtIpSxZfR",
+        "outputId": "1054a687-0d91-43fe-b317-2867172266b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "6\n",
+            "24\n",
+            "120\n",
+            "720\n"
+          ]
+        }
+      ]
     }
   ]
 }
