--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcMlXeotAy5/OaFtXJRqmP",
+      "authorship_tag": "ABX9TyMVP7saElWHOzZq4dUNrMjj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1413,21 +1413,25 @@
         "sum=0\n",
         "for i in range(1,11,2):\n",
         "  sum=sum+i\n",
-        "print(sum)"
+        "  print(sum)"
       ],
       "metadata": {
         "id": "Gy7C4Ijvv9ZS",
-        "outputId": "4f5deda5-38c1-45ed-823c-586dc922f5c2",
+        "outputId": "18019567-161f-4a8e-fdd1-0c9f8bf42329",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "1\n",
+            "4\n",
+            "9\n",
+            "16\n",
             "25\n"
           ]
         }
@@ -1439,21 +1443,26 @@
         "sum=0\n",
         "for i in range(2,13,2):\n",
         "  sum=sum+i\n",
-        "print(sum)"
+        "  print(sum)"
       ],
       "metadata": {
         "id": "F-CjWAmnwJeT",
-        "outputId": "2dc89a3b-a075-4530-e14c-3f96339a0838",
+        "outputId": "e2947ba3-bac3-40f0-8a15-9708d43bc410",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "2\n",
+            "6\n",
+            "12\n",
+            "20\n",
+            "30\n",
             "42\n"
           ]
         }
@@ -1537,7 +1546,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1633,22 +1642,24 @@
         "  factorial=factorial*i\n",
         "  if i % 2==0:\n",
         "    sum=factorial+sum\n",
-        "print(sum)"
+        "print(sum)\n",
+        "print(factorial)"
       ],
       "metadata": {
         "id": "INDMqKxCn66p",
-        "outputId": "faa0f771-fb0c-42c8-d02f-fbf564e43380",
+        "outputId": "b2ac89eb-682d-464c-8015-b8f49e903710",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "746\n"
+            "746\n",
+            "720\n"
           ]
         }
       ]
@@ -1656,33 +1667,47 @@
     {
       "cell_type": "code",
       "source": [
+        "#double loop\n",
         "sum=0\n",
         "for a in range(1,11,2):\n",
         "  fact=1\n",
-        "for b in range(1,i+1):\n",
+        "for b in range(1,a+1):\n",
         "  fact=fact*b\n",
         "  sum=sum+fact\n",
-        "  print(fact)\n"
+        "  print(fact)\n",
+        "  print(sum)\n"
       ],
       "metadata": {
         "id": "bCXEtIpSxZfR",
-        "outputId": "1054a687-0d91-43fe-b317-2867172266b5",
+        "outputId": "07f46ca4-4707-4383-a3fc-e4e50d099a27",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "1\n",
+            "1\n",
             "2\n",
+            "3\n",
             "6\n",
+            "9\n",
             "24\n",
+            "33\n",
             "120\n",
-            "720\n"
+            "153\n",
+            "720\n",
+            "873\n",
+            "5040\n",
+            "5913\n",
+            "40320\n",
+            "46233\n",
+            "362880\n",
+            "409113\n"
           ]
         }
       ]
