--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVP7saElWHOzZq4dUNrMjj",
+      "authorship_tag": "ABX9TyPGhDfSY1HqHz31oilDA5n8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1422,7 +1422,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1452,7 +1452,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1474,25 +1474,21 @@
         "factorial=1\n",
         "for i in range(1,6):\n",
         "  factorial=factorial*i\n",
-        "  print(factorial)"
+        "print(factorial)"
       ],
       "metadata": {
         "id": "k1FGrtwDx_Id",
-        "outputId": "ac7a183e-7c83-4a81-f3da-1ae92ee2b6b9",
+        "outputId": "ca7f8650-3f30-4456-932d-48e24f5e0df2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "2\n",
-            "6\n",
-            "24\n",
             "120\n"
           ]
         }
@@ -1652,7 +1648,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1684,7 +1680,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1708,6 +1704,74 @@
             "46233\n",
             "362880\n",
             "409113\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#factor\n",
+        "#3!+8!+13!+14!+20!+26!=?\n",
+        "#3!+8!+13!=?\n",
+        "sum1=0\n",
+        "for c in range(3,14,5):\n",
+        "   fact=1\n",
+        "   for d in range(1,c+1):\n",
+        "    fact=fact*d\n",
+        "   sum1=sum1+fact\n",
+        "print(sum1)\n",
+        "print(fact)"
+      ],
+      "metadata": {
+        "id": "_K2eEv2A4kqT",
+        "outputId": "df1b7386-7c66-4d7c-c208-326b14162b5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6227061126\n",
+            "6227020800\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#14!+26!+6!=?\n",
+        "sum2=0\n",
+        "for c in range(14,27,6):\n",
+        "  fact=1\n",
+        "  for d in range(1,c+1):\n",
+        "     fact=fact*c\n",
+        "  sum2=sum2+fact\n",
+        "print(fact)\n",
+        "print(sum2)\n",
+        "print(sum1+sum2)"
+      ],
+      "metadata": {
+        "id": "FocOHHR4709R",
+        "outputId": "044a9091-a315-4eae-9ae6-61b8d38223c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6156119580207157310796674288400203776\n",
+            "6156119580312014910807786295225761792\n",
+            "6156119580312014910807786301452822918\n"
           ]
         }
       ]
